--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
 		"last 5 versions"
 	],
 	"dependencies": {
+		"@easepick/bundle": "^1.2.1",
+		"@easepick/core": "^1.2.1",
+		"@easepick/time-plugin": "^1.2.1",
 		"@tarekraafat/autocomplete.js": "^10.2.7"
 	}
 }
